# AECO-Launcher

./: Cargo.toml  Cross.toml  linux-wrapper-template.sh  pkg.sh
deb/atomix-eco-saga10_amd64/DEBIAN/: control
deb/atomix-eco-saga10_amd64/usr/share/applications/: atomix-eco-saga10.desktop
src/: build.rs  main.rs  message.rs  version.rs
src/atomix/: frame.rs  mod.rs
src/patcher/: check_patches.rs  constants.rs  download.rs  error.rs  mod.rs  utils.rs  worker.rs
src/ui/: mod.rs
src/ui/atomix/: progress_bar.rs  roundbutton.rs
