[package]
name = "aeco-launcher"
version = "1.0.1"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
subprocess = "0.2.9"

[dependencies]
aeco-patch-config = { git = "https://github.com/ChrisMiuchiz/AECO-Patch-Config.git", rev = "3a4513e" }
aeco-archive = { git = "https://github.com/ChrisMiuchiz/AECO-Archive.git", rev = "99e7c38" }
byte-unit = "4.0.14"
eframe = "0.19.0"
futures-util = "0.3.24"
image = "0.24.3"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "stream", "rustls-tls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tempfile = "3.3.0"
tokio = { version = "1.21.1", features = ["rt-multi-thread"] }
zip = "0.6.2"
open = "3.0.3"
subprocess = "0.2.9"
encoding_rs = "0.8.31"

[features]
dont_update_self = []

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
